# ros_pipeline

./: .gitmodules  INSTALL.md  README.md  TODO
data_manager/: CMakeLists.txt  package.xml
data_manager/include/data_manager/: dataManager.hpp  header.hpp  openposeKpSub.hpp
data_manager/launch/: pipeline.launch
data_manager/scripts/: action_classifier
data_manager/src/: dataManager.cpp  data_manager.cpp  openposeKpSub.cpp
doc/: INSTALL.md  Project-Plan.pptx
message_repository/: CMakeLists.txt  package.xml
message_repository/msg/: BodypartDetection.msg  OpenposePoint.msg  PersonDetection.msg  PersonDetection_3d.msg
message_repository/srv/: ActionClassifier.srv  ActionnessProposal.srv  PoseDetection.srv
openpose_ros/: CMakeLists.txt  README.md  package.xml
openpose_ros/include/openpose_ros/: .header.hpp.swp  header.hpp  imageReader.hpp  openposeROS.hpp  openpose_ros.hpp  rosImageSubscriber.hpp  spline.h
openpose_ros/launch/: openpose_ros.launch
openpose_ros/result/keypoints/: keypoints_000000000000.json  keypoints_000000000001.json  keypoints_000000000002.json  keypoints_000000000003.json  keypoints_000000000004.json  keypoints_000000000005.json
openpose_ros/src/: imageReader.cpp  imageSeqReader.cpp  openpose.cpp  openposeROS.cpp  openpose_ros.cpp  pose_smoothing.cpp  rosImageSubscriber.cpp  test_smoothing.cpp
pose_3d_ros/: CMakeLists.txt  package.xml
pose_3d_ros/exp/default/: opt.txt
pose_3d_ros/scripts/: demo.py  pose_3d_ros
pose_3d_ros/scripts/utils/: debugger.py
pose_net/: CMakeLists.txt  package.xml
pose_net/scripts/: pose_net
